# AI-Resume-Screener

./: .gitignore  AI_Resume_Screener_Project_Description.txt  README.md  pyproject.toml  utils.py
resume_screener/: README.md  app.py  pyproject.toml  utils.py
resume_screener/models/: vector_db.py
