[project]
name = "resume-screener"
version = "0.1.0"
description = "AI-powered Resume Screening and Candidate Ranking System"
authors = [{name = "Shadab Jamadar"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "groq==1.5.0",
    "nltk==3.9.4",
    "numpy==2.5.0",
    "openai==2.44.0",
    "pandas==3.0.3",
    "pdfplumber==0.11.10",
    "pypdf2==3.0.1",
    "scikit-learn==1.9.0",
    "sentence-transformers==5.6.0",
    "spacy==3.8.14",
    "streamlit==1.58.0",
    "torchvision==0.27.1",
    "faiss-cpu==1.14.3",
    "mypy==2.1.0",
    "ruff==0.15.20",
]
